--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sharp": "0.32.1",
     "typescript": "5.1.3"
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "8.8.0"
   }
 }
