añadiendo un blog con código y eso

--- a/package.json
+++ b/package.json
@@ -9,15 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/mdx": "13.4.7",
     "next": "13.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "sharp": "0.32.1"
+    "rehype-pretty-code": "0.10.0",
+    "remark-gfm": "3.0.1",
+    "sharp": "0.32.1",
+    "shiki": "0.14.2"
   },
   "devDependencies": {
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@types/mdx": "2.0.5",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "@types/react-syntax-highlighter": "15.5.7",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
     "eslint": "8.42.0",
