--- a/package.json
+++ b/package.json
@@ -9,18 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/mdx": "13.4.7",
-    "next": "13.4.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "rehype-pretty-code": "0.10.0",
-    "remark-gfm": "3.0.1",
-    "sharp": "0.32.1",
-    "shiki": "0.14.2"
-  },
-  "devDependencies": {
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.4.7",
+    "@tailwindcss/typography": "0.5.9",
     "@types/mdx": "2.0.5",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
@@ -28,10 +20,25 @@
     "@types/react-syntax-highlighter": "15.5.7",
     "@typescript-eslint/eslint-plugin": "5.59.9",
     "@typescript-eslint/parser": "5.59.9",
+    "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "eslint-config-prettier": "8.8.0",
     "eslint-plugin-prettier": "4.2.1",
-    "typescript": "5.0.3"
+    "next": "13.4.5",
+    "next-mdx-remote": "4.4.1",
+    "postcss": "8.4.24",
+    "prettier": "2.8.8",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "rehype-pretty-code": "0.10.0",
+    "rehype-stringify": "9.0.3",
+    "remark-frontmatter": "4.0.1",
+    "remark-gfm": "3.0.1",
+    "sharp": "0.32.1",
+    "shiki": "0.14.2",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.0.3",
+    "vfile-matter": "5.0.0"
   }
 }
