--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.4.7",
+    "@tailwindcss/aspect-ratio": "0.4.2",
     "@tailwindcss/typography": "0.5.9",
     "@types/mdx": "2.0.5",
     "@types/node": "20.3.0",
@@ -29,6 +30,7 @@
     "next-mdx-remote": "4.4.1",
     "postcss": "8.4.24",
     "prettier": "2.8.8",
+    "prettier-plugin-tailwindcss": "0.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-pretty-code": "0.10.0",
@@ -39,6 +41,7 @@
     "shiki": "0.14.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.3",
-    "vfile-matter": "5.0.0"
+    "vfile-matter": "5.0.0",
+    "zod": "3.21.4"
   }
 }
